<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottomsheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <ImageView
      android:id="@+id/closet"
      android:layout_width="20dp"
      android:layout_height="wrap_content"
      android:contentDescription="@string/closet"
      android:src="@drawable/ic_closet"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/white"/>

    <ImageView
      android:id="@+id/close"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_margin="16dp"
      android:layout_marginEnd="16dp"
      android:contentDescription="@string/close"
      android:padding="8dp"
      android:src="@drawable/ic_close"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/white"/>

    <TextView
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:text="@string/plant_name"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@id/close"
      app:layout_constraintStart_toStartOf="parent"/>

    <TextView
      android:id="@+id/sheet_gascore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_weight="1"
      android:text="@string/ga_score_placeholder"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"/>

    <ImageView
      android:id="@+id/imageView2"
      android:layout_width="34dp"
      android:layout_height="31dp"
      android:layout_marginStart="8dp"
      android:contentDescription="@string/leaf"
      app:layout_constraintStart_toEndOf="@+id/sheet_gascore"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:srcCompat="@drawable/ga_score_white"/>

    <TextView
      android:id="@+id/label_suggestions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/suggestions"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_suggestions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toBottomOf="@id/label_suggestions"/>

    <TextView
      android:id="@+id/label_cautions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/cautions"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/rv_suggestions"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_cautions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toBottomOf="@id/label_cautions"/>

    <TextView
      android:id="@+id/label_positives"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/positives"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/rv_cautions"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_positives"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintTop_toBottomOf="@id/label_positives"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>