<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >

<androidx.constraintlayout.widget.ConstraintLayout
  android:id="@+id/bottomsheet_camera"
  android:background="@drawable/flower_background"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ga_camera"
    android:textColor="@color/white"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.056"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/closet"/>

  <ImageView
    android:id="@+id/closet"
    android:layout_width="20dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/closet"
    android:src="@drawable/ic_closet"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/white"/>

  <ImageView
    android:id="@+id/close"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_margin="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:contentDescription="@string/close"
    android:padding="8dp"
    android:src="@drawable/ic_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/white"/>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/camera_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4"
    app:layout_constraintVertical_bias="0.0">

    <TextView
      android:id="@+id/user_suggestion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="16dp"
      android:text="@string/take_a_picture_of_a_plant"
      android:textColor="@color/app_accent_2"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/camera"/>

    <com.otaliastudios.cameraview.CameraView
      android:id="@+id/camera"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:layout_marginTop="20dp"
      android:keepScreenOn="true"
      app:cameraAudio="off"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
          android:id="@+id/take_picture_button"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:contentDescription="@string/take_a_picture"
          android:src="@drawable/camera_button"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>
      </androidx.constraintlayout.widget.ConstraintLayout>


    </com.otaliastudios.cameraview.CameraView>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loading_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.airbnb.lottie.LottieAnimationView
      android:id="@+id/picture_loading_anim"
      android:layout_width="250dp"
      android:layout_height="500dp"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="100dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:lottie_autoPlay="true"
      app:lottie_loop="true"
      app:lottie_rawRes="@raw/hand"/>

    <androidx.cardview.widget.CardView
      android:id="@+id/card"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="270dp"
      android:paddingBottom="25dp"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="30dp"
      app:cardElevation="4dp"
      app:layout_constraintEnd_toEndOf="@+id/picture_loading_anim"
      app:layout_constraintStart_toStartOf="@+id/picture_loading_anim"
      app:layout_constraintTop_toTopOf="@+id/picture_loading_anim">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/loading_message"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/loading_picture_taken"
          android:textAlignment="center"
          android:textSize="30sp"
          app:layout_constraintTop_toTopOf="parent"
          tools:layout_editor_absoluteX="73dp"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="20dp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4">

    <androidx.cardview.widget.CardView
      android:id="@+id/success_retry_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="30dp"
      app:cardElevation="4dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rv_suggestions">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/take_another_picture"
          android:textAlignment="center"
          android:textSize="30sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:layout_editor_absoluteX="73dp"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
      android:id="@+id/plant__name"
      android:layout_width="0dp"
      android:layout_height="43dp"
      android:layout_marginTop="10dp"
      android:text="@string/plant_name"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/picture_view"
      tools:layout_conversion_absoluteHeight="45dp"
      tools:layout_conversion_absoluteWidth="371dp"/>

    <TextView
      android:id="@+id/plant_scientific_name"
      android:layout_width="0dp"
      android:layout_height="22dp"
      android:text="@string/scientific_name"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="@+id/plant__name"
      app:layout_constraintStart_toStartOf="@+id/plant__name"
      app:layout_constraintTop_toBottomOf="@+id/plant__name"
      tools:layout_conversion_absoluteHeight="21dp"
      tools:layout_conversion_absoluteWidth="371dp"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_suggestions"
      android:layout_width="0dp"
      android:layout_height="140dp"
      android:layout_marginTop="10dp"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/status_text"
      tools:layout_conversion_absoluteHeight="241dp"
      tools:layout_conversion_absoluteWidth="371dp"/>

    <TextView
      android:id="@+id/status_emoji"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/smile_utf"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/plant_scientific_name"
      tools:layout_conversion_absoluteHeight="53dp"
      tools:layout_conversion_absoluteWidth="50dp"/>

    <TextView
      android:id="@+id/status_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/status_text_placeholder"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/status_emoji"
      tools:layout_conversion_absoluteHeight="80dp"
      tools:layout_conversion_absoluteWidth="281dp"/>

    <ImageView
      android:id="@+id/picture_view"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:contentDescription="@string/picture_taken"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars"/>

  </androidx.constraintlayout.widget.ConstraintLayout>


  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="20dp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_anim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/error"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_error_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

      <androidx.cardview.widget.CardView
        android:id="@+id/error_retry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/picture_loading_anim"
        app:layout_constraintStart_toStartOf="@+id/picture_loading_anim"
        app:layout_constraintTop_toTopOf="@+id/picture_loading_anim">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="73dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>