<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="100dp">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/inner_card_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:maxLines="2"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <TextView
        android:id="@+id/gaScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/card_score_placeholder"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

      <ImageView
        android:id="@+id/imageView"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/leaf"
        app:layout_constraintStart_toEndOf="@+id/gaScore"
        app:layout_constraintTop_toTopOf="@+id/gaScore"
        app:layout_constraintBottom_toBottomOf="@id/gaScore"
        app:srcCompat="@drawable/ga_score_white"/>

      <ImageView
        android:id="@+id/recommended"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/recommended_icon"
        android:src="@drawable/recommended"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/gaScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gaScore"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>