<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_frag"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_fruit"
        app:layout_constraintHeight_percent=".4"
        android:id="@+id/cl_weather">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Roviano"
            android:textSize="29sp"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:id="@+id/city"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="19° | Mostly Clear"
            android:textSize="19sp"
            android:textColor="@color/sub_text_frag"
            android:id="@+id/city_temp"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_temp"
            android:src="@drawable/cloud_tunder"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="8dp"
            android:id="@+id/icon_weather"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_temp"
            app:layout_constraintStart_toEndOf="@id/city_temp_min"
            app:layout_constraintEnd_toStartOf="@id/icon_weather"
            android:layout_marginTop="16dp"
            android:text="Max Temp."
            android:textSize="14sp"
            android:textColor="@color/sub_text_frag"
            android:id="@+id/city_temp_max"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_temp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:text="Min Temp."
            android:textSize="14sp"
            android:textColor="@color/sub_text_frag"
            android:id="@+id/city_temp_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_temp_max"
            app:layout_constraintStart_toStartOf="@id/city_temp_max"
            app:layout_constraintEnd_toEndOf="@id/city_temp_max"
            android:layout_marginTop="8dp"
            android:text="32°"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:id="@+id/city_temp_max_value"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_temp_min"
            app:layout_constraintStart_toStartOf="@id/city_temp_min"
            app:layout_constraintEnd_toEndOf="@id/city_temp_min"
            android:layout_marginTop="8dp"
            android:text="22°"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:id="@+id/city_temp_min_value"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_weather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/icon_weather"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_weather"
        app:layout_constraintBottom_toTopOf="@id/cl_vegetables"
        app:layout_constraintHeight_percent=".2"
        android:id="@+id/cl_fruit">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="6dp"
            app:layout_constraintBottom_toTopOf="@id/list_fruit"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:text="@string/fruit"
            android:id="@+id/label_fruit"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/label_fruit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/list_fruit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_fruit"
        app:layout_constraintBottom_toTopOf="@id/cl_flowers"
        app:layout_constraintHeight_percent=".2"
        android:id="@+id/cl_vegetables">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/list_vegetables"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="6dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:text="@string/vegetables"
            android:id="@+id/label_vegetables"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/label_vegetables"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/list_vegetables"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_vegetables"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".2"
        android:id="@+id/cl_flowers">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/list_flowers"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="6dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:text="@string/flowers"
            android:id="@+id/label_flowers"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/label_flowers"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/list_flowers"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>